Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Add a script to make available vocabulary keys sorted by label or by 
  translated msgid
Bug fixes:
~~~~~~~~~~
- Generic select widget did not refuse validation of empty values when required
  if vocabulary did not hold blank values
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-